# Name2Gender

./: .gitignore  README.md  main.py  pyproject.toml
name2gender/: __init__.py  __main__.py  _entry_point.py  model.py
name2gender/gender_detection/: model.py
test/: main.py
